# RabbitMQ_learning

./: README.md
rabbit_cluster/server1/: docker-compose.yml
rabbit_cluster/server2/: docker-compose.yml
send_rbmq_receive/: docker-compose.yml  flow.txt
send_rbmq_receive/cpp_app/: CMakeLists.txt  Dockerfile  main.cpp
send_rbmq_receive/python_app/: Dockerfile  app.py
send_rbmq_receive/rabbitmq_config/: definitions.json  rabbitmq.conf  script.txt
